--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@
   font-size: 1rem;
 }
 
+.link-footer a {
+  outline: 0;
+}
+
 body {
   background-color: #ffffff;;
 }
